fix hideous decoration alignment

--- a/src/info/inline/widgets/CourseVideo.scss
+++ b/src/info/inline/widgets/CourseVideo.scss
@@ -16,30 +16,33 @@
 			position: absolute;
 			display: flex;
 
-			.remove {
-				i {
-					color: #333;
+			i {
+				position: relative;
+				color: #333;
+				font-size: 10px;
+				font-weight: 600;
+				padding: 2px;
+				margin-right: 6px;
+				display: inline-block;
+				z-index: 1;
+				width: 15px;
+
+				&::after {
 					background-color: white;
 					border-radius: 10px;
-					padding: 2px;
-					font-size: 10px;
-					font-weight: 600;
-					margin-right: 6px;
+					content: "";
+					display: block;
+					position: absolute;
+					width: 15px;
+					height: 15px;
+					top: -1px;
+					left: 0;
+					z-index: -1;
 				}
 			}
 
 			.change {
 				margin-right: 12px;
-
-				i {
-					color: #333;
-					background-color: white;
-					border-radius: 10px;
-					padding: 2px;
-					font-size: 10px;
-					font-weight: 600;
-					margin-right: 6px;
-				}
 			}
 
 			.remove, .change {
